fixed spacing of group profile page and animation

--- a/frontend/src/GroupProfilePage/GroupProfilePage.css
+++ b/frontend/src/GroupProfilePage/GroupProfilePage.css
@@ -15,16 +15,35 @@
     animation-name: navbaropacity;
     animation-duration: 3s;
 }
-/* .landing-root .box {
-    height: clamp(55px, 9vw, 90px);
+.landing-root .main-column-box {
+    height: clamp(100px, 9vh, 150px);
+    width: 50vw;
     background-color: var(--primary-color-main);
-    position: relative;
-    z-index: 5;
-} */
+    position: absolute;
+    z-index: 2;
+}
+
+.group-profile-page-components {
+    width: 100vw;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
+
+.component-box {
+    height: 8vh;
+    width: 90vw;
+    z-index: 3;
+    background-color: var(--primary-color-main);
+}
+
 .group-name {
     margin-top: 10px;
     margin-left: 4vw;
     height: clamp(55px, 9vw, 90px);
+    z-index: 3;
 }
 .landing-root .d-flex {
     display: flex;
@@ -44,9 +63,10 @@
 }
 
 .individual-comparisons {
-    margin-left: 4vw;
+    margin-top: 70px;
+    margin-left: 8vw;
     animation-name: insightanimation;
-    animation-duration: 2.25s;
+    animation-duration: 2.75s;
     animation-timing-function: cubic-bezier(0, 0.46, 0.74, 1.13);
 }
 
@@ -82,20 +102,40 @@
     }
 }
 
-@media (min-width: 1250px) {
-    .individual-comparisons {
-        margin-left: 8vw;
-    }
-}
-
-@media (max-width: 720px) {
+@media (max-width: 780px) {
     .individual-comparisons {
         margin-left: 4vw;
+        margin-top: 10px;
     }
     .member-display {
         width: 90vw;
     }
     .playlist-carousel {
         margin-bottom: 15px;
+    }
+    .group-name {
+        width: 100vw;
+    }
+    .group-profile-page-components {
+        align-items: start;
+        justify-content: start;
+    }
+    .landing-root .main-column-box {
+        height: 100px;
+        width: 90vw;
+        z-index: 2;
+    }
+    .component-box {
+        height: 0px;
+    }
+}
+@media (max-height: 1200px) {
+    .component-box {
+        height: 2.5vh;
+    }
+}
+@media (max-height: 720px) {
+    .component-box {
+        height: 0px;
     }
 }
