--- a/frontend/src/GroupProfilePage/PlaylistCarousel/PlaylistCarousel.css
+++ b/frontend/src/GroupProfilePage/PlaylistCarousel/PlaylistCarousel.css
@@ -94,7 +94,7 @@
     border-radius: 10px;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 780px) {
     .playlist-container{
         width: 90vw;
     }
